--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,13 @@
     <!--Errors-->
     <string name="error_user_not_found">User not found</string>
     <string name="error_something_went_wrong">Oops something went wrong</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="text_welcome">Welcome</string>
+    <string name="text_sign_up_to_start">Sign up to start</string>
+    <string name="text_email">Email</string>
+    <string name="text_have_account_sing_in">Have account? Sing in!</string>
+    <string name="text_password">Password</string>
+    <string name="text_confirm_password">Confirm password</string>
+    <string name="text_register">Register</string>
+    <string name="text_continue">Continue</string>
 </resources>
