--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <!--Errors-->
     <string name="error_user_not_found">User not found</string>
     <string name="error_something_went_wrong">Oops something went wrong</string>
+    <string name="error_email_cannot_be_blank">Email can\'t be blank</string>
+    <string name="error_email_pattern_not_match">Email is not valid</string>
+    <string name="error_password_too_short">Password should contains at least %d characters</string>
 
     <string name="text_welcome">Welcome</string>
     <string name="text_sign_up_to_start">Sign up to start</string>
@@ -16,6 +19,5 @@
     <string name="text_havent_account">Haven\'t account?</string>
     <string name="text_sign_up">Sign up!</string>
     <string name="text_forgot_password">Forgot password?</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
