--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="text_havent_account">Haven\'t account?</string>
     <string name="text_sign_up">Sign up!</string>
     <string name="text_forgot_password">Forgot password?</string>
+    <string name="text_nickname">Nickname</string>
+    <string name="text_about">About</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
