--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="error_nick_name_is_empty">Please enter your nickname</string>
     <string name="error_failed_to_upload_photo">Failed to upload your photo. Please try again</string>
 
+    <!-- Menu -->
+    <string name="menu_item_home">Home</string>
+    <string name="menu_item_list">Watch List</string>
+    <string name="menu_item_search">Search</string>
+    <string name="menu_item_profile">Profile</string>
+
     <string name="text_welcome">Welcome</string>
     <string name="text_sign_up_to_start">Sign up to start</string>
     <string name="text_email">Email</string>
@@ -25,9 +31,9 @@
     <string name="text_forgot_password">Forgot password?</string>
     <string name="text_nickname">Nickname</string>
     <string name="text_about">About</string>
-
+    <string name="text_fill_your_profile">Fill your profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="text_fill_your_profile">Fill your profile</string>
+
 
 </resources>
