--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="text_fill_your_profile">Fill your profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_trending_anime">Trending Anime</string>
+    <string name="text_episodes">%1$d Episodes</string>
 
 
 </resources>
