add all anime request and update layout, add internet error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_trending_anime">Trending Anime</string>
     <string name="text_episodes">%1$d Episodes</string>
+    <string name="text_all">All</string>
 
 
 </resources>
