--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_trending_anime">Trending Anime</string>
+    <string name="text_popular_ongoing">Popular ongoing</string>
     <string name="text_episodes">%1$d Episodes</string>
     <string name="text_all">All</string>
 
