--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="text_welcome">Welcome</string>
     <string name="text_sign_up_to_start">Sign up to start</string>
     <string name="text_email">Email</string>
+    <string name="text_search">Search</string>
     <string name="text_have_account_sing_in">Have account? Sing in!</string>
     <string name="text_password">Password</string>
     <string name="text_confirm_password">Confirm password</string>
